syntax = "proto3";

package auth;

option go_package = "github.com/niksmo/gophkeeper/proto/auth;authbp";

service Auth {
  rpc RegisterUser (RegUserRequest) returns (RegUserResponse) {};
  rpc AuthorizeUser (AuthUserRequest) returns (AuthUserResponse){};
}

message RegUserRequest {
    string login = 1;
    bytes password = 2;
}

message RegUserResponse {
    string token = 1;
}

message AuthUserRequest {
    string login = 1;
    bytes password = 2;
}

message AuthUserResponse {
    string token = 1;
}
